# I-Form_Research_Server_Docs

./: README.md  build.py  mkdocs.yaml  netlify.toml  pyproject copy.toml  pyproject.toml  scripts_config.py
docs/: index.md
docs/getting_started/: accessing_the_server.md  deploying_new_nodes.md  usage.md
src/: research_server_docs.py
